--- a/index.html
+++ b/index.html
@@ -3,19 +3,19 @@
 <head>
 <title>Flipball</title>
 </head>
-<body>
+<body align="center" style="margin-top: 200px;">
 
-<h1>Instruções</h1>
-<p>Aperte a tecla seta para cima para jogar sozinho.</p>
-<p>Aperte a tecla M para deixar a máquina jogando.</p>
+    <h1>Instruções</h1>
+    <p>Aperte a tecla seta para cima para jogar sozinho.</p>
+    <p>Aperte a tecla M para deixar a máquina jogando.</p>
 
-<a href="/game_orientado">Jogo sem IA</a>
-<br/><br/>
-<a href="/algoritmo_reforco_distancia">Alg. Reforço apenas distância</a>
-<br/><br/>
-<a href="/algoritmo_reforco_distancia_altura">Alg. Reforço distância e altura</a>
-<br/><br/>
-<a href="/redes_neurais_e_alg_genetico_v2">Redes Neurais + Algoritmo genético</a>
+    <a href="/game_orientado">Jogo sem IA</a>
+    <br/><br/>
+    <a href="/algoritmo_reforco_distancia">Alg. Reforço apenas distância</a>
+    <br/><br/>
+    <a href="/algoritmo_reforco_distancia_altura">Alg. Reforço distância e altura</a>
+    <br/><br/>
+    <a href="/redes_neurais_e_alg_genetico_v2">Redes Neurais + Algoritmo genético</a>
 
 </body>
 </html>
