--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
 <head>
 <title>Flipball</title>
+<meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
 </head>
 <body align="center" style="margin-top: 200px;">
 
