--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <title>Flipball</title>
 <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
 </head>
-<body align="center" style="margin-top: 200px;">
+<body style="margin-top: 200px;text-align: center;">
 
     <h1>Instruções</h1>
     <p>Aperte a tecla seta para cima para jogar sozinho.</p>
